# GATrussSolver

./: CMakeLists.txt  EvolutionParameters.cpp  EvolutionParameters.h  Evolver.cpp  Evolver.h  Genotype.cpp  Genotype.h  Global.h  Hyperparameters.cpp  Hyperparameters.h  Point.h  Species.cpp  Species.h  Vivarium.cpp  Vivarium.h  main.cpp
